fixed aligment and spacing fixed aligment and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 
 /*backgrounds and colors*/
 .service-divider{
+    margin-left: 0.8rem;
     height: 10px;
     background-color: var(--blue);
 }
@@ -50,7 +51,7 @@
     background-color: #8c6910;
     height: 3px;
     width: 50px;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 
@@ -77,6 +78,7 @@
 .updates-meta-text{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 12px;
+    margin-top: -10px;
 }
 .event-month{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
